tests/reject/closureError.emojic
🐇 🍤 🍇
  🐇❗️💚 g 🍇🔡➡️🔡🍉 🚧🚧 🍇

  🍉
🍉


🏁 🍇
  🍇 g🔡 ➡️🔡 🚧🚧
    🚨🆕🚧🔤This is an error🔤❗️
  🍉 ➡️ closure

  🆗 💚🐇🍤 closure❗️ 🍇
  🍉
  🙅 error 🍇
    😀 🔤An error occured: 🧲💬error❗️🧲🔤 ❗️
  🍉
🍉
